tests/rosetta/out/C/DNS-query.c
// Generated by Mochi compiler v0.10.30 on 2025-07-18T17:11:38Z
// Generated by Mochi compiler v0.10.30 on 2025-07-18T17:11:38Z
#include <stdio.h>
#include <stdlib.h>

static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static list_int res;
static int addrs;
static int err;

int _mochi_main() {
  res = net.lookup_host("www.kame.net");
  addrs = res.data[0];
  err = res.data[1];
  if ((err == nil)) {
    char *tmp1 = _str(addrs);
    printf("%s\n", tmp1);
  } else {
    printf("%d\n", err);
  }
  return 0;
}
int main() { return _mochi_main(); }
